tests/regression/error/hw4_error18.nex
1 < 2 * 3 ? "bob" - "bo" : none;
